--- a/public/date-directive.html
+++ b/public/date-directive.html
@@ -6,13 +6,19 @@
             <table>
                 <tr>
                     <td style='padding-right: 3px;'>
-                        <input name="day" type="number" class="form-control input-sm no-spinner" placeholder="DD" ng-model="dateModel.day" style="width: 50px" ng-maxlength="2" min="1" max="31"/>
+                        <div ng-class="{'has-error has-feedback' : dateForm.day.$invalid && dateForm.day.$dirty}">
+                            <input name="day" type="number" class="form-control input-sm no-spinner" placeholder="DD" ng-model="dateModel.day" style="width: 50px" ng-maxlength="2" min="1" max="31"/>
+                        </div>
                     </td>
                     <td style='padding: 0 3px;'>
-                        <input ng-required="isMonthRequired()" name="month" type="number" class="form-control input-sm no-spinner" placeholder="MM" ng-model="dateModel.month" style="width: 50px" ng-maxlength="2" min="1" max="12"/>
+                        <div ng-class="{'has-error has-feedback' : (dateForm.month.$invalid || dateForm.month.$error.required) && dateForm.month.$dirty}">
+                            <input ng-required="isMonthRequired()" name="month" type="number" class="form-control input-sm no-spinner" placeholder="MM" ng-model="dateModel.month" style="width: 50px" ng-maxlength="2" min="1" max="12"/>
+                        </div>
                     </td>
                     <td style='padding: 0 3px;'>
-                        <input ng-required="isYearRequired()" name="year" type="number" class="form-control input-sm no-spinner" placeholder="YYYY" ng-model="dateModel.year" style="width: 80px" ng-pattern="/^[0-9]{4}$/" />
+                        <div ng-class="{'has-error has-feedback' : (dateForm.year.$invalid || dateForm.year.$error.required || dateForm.year.$error.pattern) && dateForm.year.$dirty}">
+                            <input ng-required="isYearRequired()" name="year" type="number" class="form-control input-sm no-spinner" placeholder="YYYY" ng-model="dateModel.year" style="width: 80px" ng-pattern="/^[0-9]{4}$/" />
+                        </div>
                     </td>
                 </tr>
             </table>
