--- a/public/date-directive.html
+++ b/public/date-directive.html
@@ -6,27 +6,27 @@
             <table>
                 <tr>
                     <td style='padding-right: 3px;'>
-                        <div ng-class="{'has-error has-feedback' : dateForm.day.$invalid && dateForm.day.$dirty}">
+                        <div ng-class="{'has-error has-feedback' : dateForm.day.$invalid && (dateForm.day.$dirty || submitAttempted)}">
                             <input name="day" type="number" class="form-control input-sm no-spinner" placeholder="DD" ng-model="dateModel.day" style="width: 50px" ng-maxlength="2" min="1" max="31"/>
                         </div>
                     </td>
                     <td style='padding: 0 3px;'>
-                        <div ng-class="{'has-error has-feedback' : (dateForm.month.$invalid || dateForm.month.$error.required) && dateForm.month.$dirty}">
+                        <div ng-class="{'has-error has-feedback' : (dateForm.month.$invalid || dateForm.month.$error.required) && (dateForm.month.$dirty  || submitAttempted)}">
                             <input ng-required="isMonthRequired()" name="month" type="number" class="form-control input-sm no-spinner" placeholder="MM" ng-model="dateModel.month" style="width: 50px" ng-maxlength="2" min="1" max="12"/>
                         </div>
                     </td>
                     <td style='padding: 0 3px;'>
-                        <div ng-class="{'has-error has-feedback' : (dateForm.year.$invalid || dateForm.year.$error.required || dateForm.year.$error.pattern) && dateForm.year.$dirty}">
+                        <div ng-class="{'has-error has-feedback' : (dateForm.year.$invalid || dateForm.year.$error.required || dateForm.year.$error.pattern) && (dateForm.year.$dirty || submitAttempted)}">
                             <input ng-required="isYearRequired()" name="year" type="number" class="form-control input-sm no-spinner" placeholder="YYYY" ng-model="dateModel.year" style="width: 80px" ng-pattern="/^[0-9]{4}$/" />
                         </div>
                     </td>
                 </tr>
             </table>
-            <span ng-show="dateForm.day.$invalid && dateForm.day.$dirty" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Ongeldige dag</span>
-            <span ng-show="dateForm.month.$invalid && dateForm.month.$dirty" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Ongeldige maand</span>
-            <span ng-show="dateForm.year.$error.required && dateForm.$dirty" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Jaar is verplicht</span>
-            <span ng-show="dateForm.month.$error.required && dateForm.$dirty" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Maand is verplicht</span>
-            <span ng-show="dateForm.year.$error.pattern && dateForm.year.$dirty" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Ongeldig jaartal</span>
+            <span ng-show="dateForm.day.$invalid && (dateForm.day.$dirty || submitAttempted)" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Ongeldige dag</span>
+            <span ng-show="dateForm.month.$invalid && (dateForm.month.$dirty || submitAttempted)" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Ongeldige maand</span>
+            <span ng-show="dateForm.year.$error.required && (dateForm.$dirty || submitAttempted)" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Jaar is verplicht</span>
+            <span ng-show="dateForm.month.$error.required && (dateForm.$dirty || submitAttempted)" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Maand is verplicht</span>
+            <span ng-show="dateForm.year.$error.pattern && (dateForm.year.$dirty || submitAttempted)" class="form-error-message help-inline"><i class="fa fa-exclamation-circle"></i> Ongeldig jaartal</span>
         </div>
     </div>
 </ng-form>
